--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
   .nike-container {
     @apply w-11/12 m-auto;
   }
+  .container {
+    background-image: url(./assets/nike-air-red.png);
+  }
 
   /* Scroll */
   .scroll-hidden::-webkit-scrollbar {
